<resources>
    <string name="app_name">BankMandiriTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="social_media">Social Media</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <string name="herlambang_raswanto">Herlambang Raswanto</string>
    <string name="title_product">Off White x Nike Air Max 270 White Running Shoes</string>
    <string name="time_left">Time Left</string>
    <string name="_22_10">22:10</string>
    <string name="participants">Participants</string>
    <string name="_120_people">120 people</string>
    <string name="quantity">Quantity</string>
    <string name="_10">10</string>
    <string name="sample_page_profile">Sample Page (Profile)</string>
    <string name="sample_page_social_media">Sample Page (Social Media)</string>
    <string name="sample_page_community">Sample Page (Community)</string>
</resources>